--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
         "grunt": "latest",
         "grunt-cli": "latest",
         "grunt-env": "latest",
-        "jwt-simple": "~0.1.0"
+        "jwt-simple": "~0.1.0",
+        "sendgrid": "0.3.0-rc.1.7"
     },
     "devDependencies": {
         "supertest": "latest",
