--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
         "grunt-cli": "latest",
         "grunt-env": "latest",
         "jwt-simple": "~0.1.0",
-        "sendgrid": "0.3.0-rc.1.7"
+        "sendgrid": "0.3.0-rc.1.7",
+        "stripe":"latest"
     },
     "devDependencies": {
         "supertest": "latest",
