partially done signup page

--- a/package.json
+++ b/package.json
@@ -38,7 +38,9 @@
         "grunt-env": "latest",
         "jwt-simple": "~0.1.0",
         "sendgrid": "0.3.0-rc.1.7",
-        "stripe":"latest"
+        "stripe":"latest",
+        "validator":"latest",
+        "q":"latest"
     },
     "devDependencies": {
         "supertest": "latest",
