--- a/package.json
+++ b/package.json
@@ -38,8 +38,7 @@
         "jwt-simple": "~0.1.0",
         "sendgrid": "0.3.0-rc.1.7",
         "stripe":"latest",
-        "validator":"latest",
-        "q":"latest"
+        "validator":"latest"
     },
     "devDependencies": {
         "supertest": "latest",
