took out validators

--- a/package.json
+++ b/package.json
@@ -49,8 +49,7 @@
         "karma": "~0.10.9",
         "jwt-simple": "~0.1.0",
         "sendgrid": "0.3.0-rc.1.7",
-        "stripe":"latest",
-        "validator":"latest"
+        "stripe":"latest"
     },
     "devDependencies": {
         "supertest": "latest",
