--- a/package.json
+++ b/package.json
@@ -48,7 +48,8 @@
         "karma-coverage": "~0.1.4",
         "karma": "~0.10.9",
         "jwt-simple": "~0.1.0",
-        "sendgrid": "0.3.0-rc.1.7"
+        "sendgrid": "0.3.0-rc.1.7",
+        "validator": "3.2.1"
     },
     "devDependencies": {
         "supertest": "latest",
