--- a/package.json
+++ b/package.json
@@ -19,9 +19,9 @@
         "connect-mongo": "~0.4.0",
         "connect-flash": "~0.1.1",
         "crypto": "0.0.3",
-        "passport": "~0.1.18",
-        "passport-local": "~0.1.6",
-        "passport-http-bearer": "1.0.1",
+        "passport": "latest",
+        "passport-local": "latest",
+        "passport-http-bearer": "latest",
         "lodash": "~2.4.1",
         "view-helpers": "~0.1.4",
         "mean-logger": "0.0.1",
