--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
         "grunt-env": "latest",
         "jwt-simple": "~0.1.0",
         "sendgrid": "0.3.0-rc.1.7",
-        "validator":"latest"
+        "validator":"3.2.1",
+        "knox": "0.8.9"
     },
     "devDependencies": {
         "supertest": "latest",
