--- a/bower.json
+++ b/bower.json
@@ -7,7 +7,8 @@
         "angular-cookies": "latest",
         "angular-mocks": "latest",
         "angular-route": "latest",
-        "angular-bootstrap": "0.7.0",
-        "angular-ui-utils": "latest"
+        "angular-bootstrap": "latest",
+        "angular-ui-utils": "latest",
+        "bootstrap": "latest"
     }
 }
