--- a/package.json
+++ b/package.json
@@ -41,23 +41,9 @@
         "knox": "0.8.9"
     },
     "devDependencies": {
-        "supertest": "latest",
-        "should": "latest",
-        "grunt-contrib-watch": "latest",
+        "grunt-contrib-watch": "0.5.x",
         "grunt-contrib-jshint": "latest",
-        "grunt-nodemon": "latest",
-        "grunt-concurrent": "latest",
-        "grunt-mocha-test": "latest",
-        "karma-script-launcher": "~0.1.0",
-        "karma-chrome-launcher": "~0.1.0",
-        "karma-firefox-launcher": "~0.1.0",
-        "karma-html2js-preprocessor": "~0.1.0",
-        "karma-jasmine": "~0.1.3",
-        "karma-requirejs": "~0.1.0",
-        "karma-coffee-preprocessor": "~0.1.0",
-        "karma-phantomjs-launcher": "~0.1.0",
-        "karma": "~0.10.4",
-        "grunt-karma": "~0.6.2",
-        "karma-coverage": "~0.1.0"
+        "grunt-nodemon": "0.1.x",
+        "grunt-concurrent": "0.4.x"
     }
 }
