--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
         "jwt-simple": "~0.1.0",
         "sendgrid": "0.3.0-rc.1.7",
         "validator":"3.2.1",
-        "knox": "0.8.9"
+        "knox": "0.8.9",
+        "formidable": "latest"
     },
     "devDependencies": {
         "grunt-contrib-watch": "0.5.x",
