--- a/package.json
+++ b/package.json
@@ -18,19 +18,18 @@
         "postinstall": "node node_modules/bower/bin/bower install"
     },
     "dependencies": {
-        "express": "latest",
+        "express": "~3.4.7",
         "hbs": "2.4.0",
-        "mongoose": "latest",
-        "connect-mongo": "latest",
-        "connect-flash": "latest",
-        "crypto": "latest",
-        "passport": "latest",
-        "passport-local": "latest",
-        "passport-http": "latest",
-        "passport-http-bearer": "latest",
-        "lodash": "latest",
-        "view-helpers": "latest",
-        "mean-logger": "latest",
+        "mongoose": "~3.8.x",
+        "connect-mongo": "~0.4.x",
+        "connect-flash": "~0.1.x",
+        "crypto": "~0.0.x",
+        "passport": "~0.2.x",
+        "passport-local": "~1.0.x",
+        "passport-http-bearer": "~1.0.x",
+        "lodash": "~2.4.x",
+        "view-helpers": "~0.1.x",
+        "mean-logger": "~0.0.x",
         "bower": "latest",
         "grunt": "latest",
         "grunt-cli": "latest",
@@ -39,7 +38,7 @@
         "sendgrid": "0.3.0-rc.1.7",
         "validator":"3.2.1",
         "knox": "0.8.9",
-        "formidable": "latest",
+        "formidable": "~1.0.14",
         "q": "1.0.x",
         "csvtojson":"0.1.x"
     },
